; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_taskqueue.c_TQ_SLEEP.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_taskqueue.c_TQ_SLEEP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.taskqueue = type { i32, i64 }
%struct.mtx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.taskqueue*, i8*, i8*)* @TQ_SLEEP to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @TQ_SLEEP(%struct.taskqueue* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.taskqueue*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store %struct.taskqueue* %0, %struct.taskqueue** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load %struct.taskqueue*, %struct.taskqueue** %5, align 8
  %9 = getelementptr inbounds %struct.taskqueue, %struct.taskqueue* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = load %struct.taskqueue*, %struct.taskqueue** %5, align 8
  %15 = getelementptr inbounds %struct.taskqueue, %struct.taskqueue* %14, i32 0, i32 0
  %16 = bitcast i32* %15 to %struct.mtx*
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 @msleep_spin(i8* %13, %struct.mtx* %16, i8* %17, i32 0)
  store i32 %18, i32* %4, align 4
  br label %25

19:                                               ; preds = %3
  %20 = load i8*, i8** %6, align 8
  %21 = load %struct.taskqueue*, %struct.taskqueue** %5, align 8
  %22 = getelementptr inbounds %struct.taskqueue, %struct.taskqueue* %21, i32 0, i32 0
  %23 = load i8*, i8** %7, align 8
  %24 = call i32 @msleep(i8* %20, i32* %22, i32 0, i8* %23, i32 0)
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %19, %12
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @msleep_spin(i8*, %struct.mtx*, i8*, i32) #1

declare dso_local i32 @msleep(i8*, i32*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
